# vistra-director

./: .gitignore  Makefile  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
ObjectDetection/: .gitignore  README.md  main.py  pyproject.toml
film-director/: README.md  camera.py  main.py  ptz.py  pyproject.toml  pytest.ini  test_main.py  webrtc_receiver.py
poc/: Makefile  README.md  pyproject.toml  run_all.py  run_all.sh
poc/ObjectCrop/: README.md  main.py  pyproject.toml
poc/ObjectDetection/: README.md  main.py
poc/WebRTCMotionDetection/: Makefile  README.md  main.py  pyproject.toml
poc/WebRTCZoom/: README.md  broadcast.html  index.html  main.py  pyproject.toml  zoom_control.py
poc/cd/: interactive.py  pyproject.toml  sample.py  servo_controller.py
