[project]
name = "webrtc-motion-detection"
version = "0.1.0"
description = "go2rtcのWebRTC映像を受信してYOLOv8で物体検知を行うプログラム"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiortc>=1.9.0",
    "aiohttp>=3.9.0",
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "av>=12.0.0",
]

[project.scripts]
webrtc-motion-detection = "main:main"
